@@ -35,6 +35,7 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 
 import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableSet;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrResponse;
@@ -45,12 +46,15 @@ import org.apache.solr.client.solrj.cloud.SolrCloudManager;
 import org.apache.solr.client.solrj.cloud.autoscaling.Clause.RangeVal;
 import org.apache.solr.client.solrj.cloud.autoscaling.Suggester.Hint;
 import org.apache.solr.client.solrj.impl.ClusterStateProvider;
+import org.apache.solr.client.solrj.impl.SolrClientNodeStateProvider;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
+import org.apache.solr.common.cloud.ClusterState;
 import org.apache.solr.common.cloud.DocCollection;
 import org.apache.solr.common.cloud.DocRouter;
 import org.apache.solr.common.cloud.Replica;
 import org.apache.solr.common.cloud.ReplicaPosition;
 import org.apache.solr.common.cloud.ZkStateReader;
+import org.apache.solr.common.cloud.rule.ImplicitSnitch;
 import org.apache.solr.common.params.CollectionParams;
 import org.apache.solr.common.params.CollectionParams.CollectionAction;
 import org.apache.solr.common.params.SolrParams;
@@ -67,6 +71,7 @@ import org.junit.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.apache.solr.client.solrj.cloud.autoscaling.Suggestion.ConditionType.FREEDISK;
 import static org.apache.solr.client.solrj.cloud.autoscaling.Suggestion.ConditionType.REPLICA;
 import static org.apache.solr.common.params.CollectionParams.CollectionAction.ADDREPLICA;
@@ -207,30 +212,30 @@ public class TestPolicy extends SolrTestCaseJ4 {
     assertEquals(Operand.RANGE_EQUAL, REPLICA.getOperand(Operand.EQUAL, "2.01", null));
     assertEquals(Operand.RANGE_NOT_EQUAL, REPLICA.getOperand(Operand.NOT_EQUAL, "2.01", null));
 
-    Clause clause = Clause.create((Map<String, Object>) Utils.fromJSONString("{replica: '1.23', node:'#ANY'}"));
+    Clause clause = Clause.create("{replica: '1.23', node:'#ANY'}");
     assertTrue(clause.getReplica().isPass(2));
     assertTrue(clause.getReplica().isPass(1));
     assertFalse(clause.getReplica().isPass(0));
     assertFalse(clause.getReplica().isPass(3));
 
-    clause = Clause.create((Map<String, Object>) Utils.fromJSONString("{replica: '<1.23', node:'#ANY'}"));
+    clause = Clause.create("{replica: '<1.23', node:'#ANY'}");
     assertTrue(clause.getReplica().isPass(1));
     assertTrue(clause.getReplica().isPass(0));
     assertFalse(clause.getReplica().isPass(2));
 
-    clause = Clause.create((Map<String, Object>) Utils.fromJSONString("{replica: '!1.23', node:'#ANY'}"));
+    clause = Clause.create("{replica: '!1.23', node:'#ANY'}");
     assertFalse(clause.getReplica().isPass(2));
     assertFalse(clause.getReplica().isPass(1));
     assertTrue(clause.getReplica().isPass(0));
     assertTrue(clause.getReplica().isPass(3));
 
-    clause = Clause.create((Map<String, Object>) Utils.fromJSONString("{replica: 1.23, node:'#ANY'}"));
+    clause = Clause.create("{replica: 1.23, node:'#ANY'}");
     assertTrue(clause.getReplica().isPass(2));
     assertTrue(clause.getReplica().isPass(1));
     assertFalse(clause.getReplica().isPass(0));
     assertFalse(clause.getReplica().isPass(3));
 
-    clause =  Clause.create((Map<String, Object>) Utils.fromJSONString("{replica: '33%', node:'#ANY'}"));
+    clause = Clause.create("{replica: '33%', node:'#ANY'}");
     assertEquals(Operand.RANGE_EQUAL, clause.getReplica().op);
     clause = clause.getSealedClause(condition -> {
       if (condition.name.equals("replica")) {
@@ -240,7 +245,7 @@ public class TestPolicy extends SolrTestCaseJ4 {
     });
     assertTrue( clause.getReplica().isPass(2));
 
-    clause =  Clause.create((Map<String, Object>) Utils.fromJSONString("{replica: '3 - 5', node:'#ANY'}"));
+    clause = Clause.create("{replica: '3 - 5', node:'#ANY'}");
     assertEquals(Operand.RANGE_EQUAL,  clause.getReplica().getOperand());
     RangeVal range = (RangeVal) clause.getReplica().getValue();
     assertEquals(3.0 , range.min);
@@ -251,10 +256,176 @@ public class TestPolicy extends SolrTestCaseJ4 {
     assertFalse(clause.replica.isPass(6));
     assertFalse(clause.replica.isPass(2));
 
-    assertEquals(new Double(1.0), clause.replica.delta(6));
-    assertEquals(new Double(-1.0), clause.replica.delta(2));
-    assertEquals(new Double(0.0), clause.replica.delta(4));
+    assertEquals(Double.valueOf(1.0), clause.replica.delta(6));
+    assertEquals(Double.valueOf(-1.0), clause.replica.delta(2));
+    assertEquals(Double.valueOf(0.0), clause.replica.delta(4));
 
+    expectThrows(IllegalArgumentException.class,
+        () -> Clause.create("{replica: '-33%', node:'#ANY'}"));
+    expectThrows(IllegalArgumentException.class,
+        () -> Clause.create("{replica: 'x%', node:'#ANY'}"));
+    expectThrows(IllegalArgumentException.class,
+        () -> Clause.create("{replica: '20%-33%', node:'#ANY'}"));
+
+    clause = Clause.create("{replica: '#EQUAL', shard:'#EACH', node:'#ANY'}");
+    assertEquals(Operand.RANGE_EQUAL, clause.replica.op);
+    clause = Clause.create("{replica: '#EQUAL', node:'#ANY'}");
+    assertEquals(Operand.RANGE_EQUAL, clause.replica.op);
+    expectThrows(IllegalArgumentException.class,
+        () -> Clause.create("{replica: '#EQUAL', node:'node_1'}"));
+    clause = Clause.create("{replica : 0, freedisk:'<20%'}");
+    assertEquals(clause.tag.computedType, Clause.ComputedType.PERCENT);
+    assertEquals(clause.tag.op, Operand.LESS_THAN);
+    expectThrows(IllegalArgumentException.class,
+        () -> Clause.create("{replica : 0, INDEX.sizeInGB:'>300'}"));
+    expectThrows(IllegalArgumentException.class,
+        () -> Clause.create("{replica:'<3', shard: '#ANV', node:'#ANY'}"));
+    expectThrows(IllegalArgumentException.class,
+        () -> Clause.create("{replica:'<3', shard: '#EACH', node:'#E4CH'}"));
+
+    clause = Clause.create("{replica: '#ALL',  freedisk:'>20%'}");
+    clause = Clause.create("{replica: '#ALL',  sysprop.zone :'west'}");
+  }
+
+
+  public void testEqualFunction() {
+
+    String clusterStateStr = "{" +
+        "  'coll1': {" +
+        "    'router': {" +
+        "      'name': 'compositeId'" +
+        "    }," +
+        "    'shards': {" +
+        "      'shard1': {" +
+        "        'range': '80000000-ffffffff'," +
+        "        'replicas': {" +
+        "          'r1': {" +
+        "            'core': 'r1'," +
+        "            'base_url': 'http://10.0.0.4:8983/solr'," +
+        "            'node_name': 'node1'," +
+        "            'state': 'active'," +
+        "            'leader': 'true'" +
+        "          }," +
+        "          'r2': {" +
+        "            'core': 'r2'," +
+        "            'base_url': 'http://10.0.0.4:7574/solr'," +
+        "            'node_name': 'node2'," +
+        "            'state': 'active'" +
+        "          }" +
+        "        }" +
+        "      }," +
+        "      'shard2': {" +
+        "        'range': '0-7fffffff'," +
+        "        'replicas': {" +
+        "          'r3': {" +
+        "            'core': 'r3'," +
+        "            'base_url': 'http://10.0.0.4:8983/solr'," +
+        "            'node_name': 'node1'," +
+        "            'state': 'active'," +
+        "            'leader': 'true'" +
+        "          }," +
+        "          'r4': {" +
+        "            'core': 'r4'," +
+        "            'base_url': 'http://10.0.0.4:8987/solr'," +
+        "            'node_name': 'node4'," +
+        "            'state': 'active'" +
+        "          }," +
+        "          'r6': {" +
+        "            'core': 'r6'," +
+        "            'base_url': 'http://10.0.0.4:8989/solr'," +
+        "            'node_name': 'node3'," +
+        "            'state': 'active'" +
+        "          }," +
+        "          'r5': {" +
+        "            'core': 'r5'," +
+        "            'base_url': 'http://10.0.0.4:8983/solr'," +
+        "            'node_name': 'node1'," +
+        "            'state': 'active'" +
+        "          }" +
+        "        }" +
+        "      }" +
+        "    }" +
+        "  }" +
+        "}";
+
+
+    ClusterState clusterState = ClusterState.load(1, clusterStateStr.getBytes(UTF_8),
+        ImmutableSet.of("node1", "node2", "node3", "node4", "node5"));
+    DelegatingClusterStateProvider clusterStateProvider = new DelegatingClusterStateProvider(null) {
+      @Override
+      public ClusterState getClusterState() throws IOException {
+        return clusterState;
+      }
+
+      @Override
+      public Set<String> getLiveNodes() {
+        return clusterState.getLiveNodes();
+      }
+    };
+
+    SolrClientNodeStateProvider solrClientNodeStateProvider = new SolrClientNodeStateProvider(null) {
+      @Override
+      protected Map<String, Object> fetchTagValues(String node, Collection<String> tags) {
+        Map<String, Object> result = new HashMap<>();
+        AtomicInteger cores = new AtomicInteger();
+        forEachReplica(node, replicaInfo -> cores.incrementAndGet());
+        if (tags.contains(ImplicitSnitch.CORES)) result.put(ImplicitSnitch.CORES, cores.get());
+        if (tags.contains(ImplicitSnitch.DISK)) result.put(ImplicitSnitch.DISK, 100);
+        return result;
+      }
+
+      @Override
+      protected Map<String, Object> fetchReplicaMetrics(String solrNode, Map<String, Object> metricsKeyVsTag) {
+        //e.g: solr.core.perReplicaDataColl.shard1.replica_n4:INDEX.sizeInBytes
+        Map<String, Object> result = new HashMap<>();
+        metricsKeyVsTag.forEach((k, v) -> {
+          if (k.endsWith(":INDEX.sizeInBytes")) result.put(k, 100);
+        });
+
+        return result;
+      }
+
+      @Override
+      protected ClusterStateProvider getClusterStateProvider() {
+        return clusterStateProvider;
+      }
+    };
+
+    Map policies = (Map) Utils.fromJSONString("{" +
+        "  'cluster-preferences': [" +
+        "    { 'minimize': 'cores', 'precision': 50}" +
+        "  ]," +
+        "  'cluster-policy': [" +
+        "    { 'replica': '#EQUAL', 'node': '#ANY'}," +
+        "  ]" +
+        "}");
+    AutoScalingConfig config = new AutoScalingConfig(policies);
+    Policy policy = config.getPolicy();
+    Policy.Session session = policy.createSession(new DelegatingCloudManager(null) {
+      @Override
+      public ClusterStateProvider getClusterStateProvider() {
+        return clusterStateProvider;
+      }
+
+      @Override
+      public NodeStateProvider getNodeStateProvider() {
+        return solrClientNodeStateProvider;
+      }
+    });
+    List<Violation> violations = session.getViolations();
+    assertEquals(1, violations.size());
+    Violation violation = violations.get(0);
+    assertEquals("node1", violation.node);
+    RangeVal val = (RangeVal) violation.getClause().replica.val;
+    assertEquals(0.0, val.min);
+    assertEquals(1.0, val.max);
+    assertEquals(0, Preference.compareWithTolerance(val.actual.doubleValue(), 0.833, 1));
+    assertEquals(3, violation.getViolatingReplicas().size());
+    Set<String> expected = ImmutableSet.of("r1", "r3", "r5");
+    for (Violation.ReplicaInfoAndErr replicaInfoAndErr : violation.getViolatingReplicas()) {
+      assertTrue(expected.contains(replicaInfoAndErr.replicaInfo.getCore()));
+    }
+    System.out.println();
 
   }
 
@@ -269,36 +440,36 @@ public class TestPolicy extends SolrTestCaseJ4 {
   }
 
   public void testOperands() {
-    Clause c = Clause.create((Map<String, Object>) Utils.fromJSONString("{replica:'<2', node:'#ANY'}"));
+    Clause c = Clause.create("{replica:'<2', node:'#ANY'}");
     assertFalse(c.replica.isPass(3));
     assertFalse(c.replica.isPass(2));
     assertTrue(c.replica.isPass(1));
     assertEquals("{\"replica\":\"<2.0\"}", c.replica.toString());
 
-    c = Clause.create((Map<String, Object>) Utils.fromJSONString("{replica:'>2', node:'#ANY'}"));
+    c = Clause.create("{replica:'>2', node:'#ANY'}");
     assertTrue(c.replica.isPass(3));
     assertFalse(c.replica.isPass(2));
     assertFalse(c.replica.isPass(1));
     assertEquals("{\"replica\":\">2.0\"}", c.replica.toString());
 
 
-    c = Clause.create((Map<String, Object>) Utils.fromJSONString("{replica:0, nodeRole:'!overseer'}"));
+    c = Clause.create("{replica:0, nodeRole:'!overseer'}");
     assertTrue(c.tag.isPass("OVERSEER"));
     assertFalse(c.tag.isPass("overseer"));
 
-    c = Clause.create((Map<String, Object>) Utils.fromJSONString("{replica:0, sysLoadAvg:'<12.7'}"));
+    c = Clause.create("{replica:0, sysLoadAvg:'<12.7'}");
     assertTrue(c.tag.isPass("12.6"));
     assertTrue(c.tag.isPass(12.6d));
     assertFalse(c.tag.isPass("12.9"));
     assertFalse(c.tag.isPass(12.9d));
 
-    c = Clause.create((Map<String, Object>) Utils.fromJSONString("{replica:0, sysLoadAvg:'>12.7'}"));
+    c = Clause.create("{replica:0, sysLoadAvg:'>12.7'}");
     assertTrue(c.tag.isPass("12.8"));
     assertTrue(c.tag.isPass(12.8d));
     assertFalse(c.tag.isPass("12.6"));
     assertFalse(c.tag.isPass(12.6d));
 
-    c = Clause.create((Map<String, Object>) Utils.fromJSONString("{replica:0, 'metrics:x:y:z':'>12.7'}"));
+    c = Clause.create("{replica:0, 'metrics:x:y:z':'>12.7'}");
     assertTrue(c.tag.val instanceof String);
     assertTrue(c.tag.isPass("12.8"));
     assertTrue(c.tag.isPass(12.8d));
@@ -306,7 +477,7 @@ public class TestPolicy extends SolrTestCaseJ4 {
     assertFalse(c.tag.isPass(12.6d));
 
     try {
-      c = Clause.create((Map<String, Object>) Utils.fromJSONString("{replica:0, 'ip_1':'<30%'}"));
+      c = Clause.create("{replica:0, 'ip_1':'<30%'}");
       fail("Expected exception");
     } catch (Exception e) {
       assertTrue(e.getMessage().contains("'%' is not allowed for variable :  'ip_1'"));
@@ -940,7 +1111,7 @@ public class TestPolicy extends SolrTestCaseJ4 {
     Policy.Session session;
     session = policy.createSession(getSolrCloudManager(nodeValues, clusterState));
 
-    List<Row> l = session.getSorted();
+    List<Row> l = session.getSortedNodes();
     assertEquals("node1", l.get(0).node);
     assertEquals("node3", l.get(1).node);
     assertEquals("node4", l.get(2).node);
@@ -1228,7 +1399,7 @@ public class TestPolicy extends SolrTestCaseJ4 {
         "{replica:0, 'nodeRole':'overseer','strict':false}," +
         "{'replica':'<1','node':'node3'}," +
         "{'replica':'<2','node':'#ANY','shard':'#EACH'}," +
-        "{'replica':'<3','shard':'#EACH','sysprop.rack':'#ANY'}" +
+        "{'replica':'<3','shard':'#EACH','sysprop.rack':'#EACH'}" +
         "]" +
         "}" +
         "}";
@@ -1712,9 +1883,42 @@ public class TestPolicy extends SolrTestCaseJ4 {
     List<Violation> violations = cfg.getPolicy().createSession(cloudManagerWithData(dataproviderdata)).getViolations();
     assertEquals(1, violations.size());
     assertEquals(4, violations.get(0).getViolatingReplicas().size());
+    assertEquals(-4, violations.get(0).replicaCountDelta, 0.1);
+    for (Violation.ReplicaInfoAndErr r : violations.get(0).getViolatingReplicas()) {
+      assertEquals(500d, r.delta, 0.1);
+
+    }
     List<Suggester.SuggestionInfo> l = PolicyHelper.getSuggestions(cfg, cloudManagerWithData(dataproviderdata));
     assertEquals(3, l.size());
     Map m = l.get(0).toMap(new LinkedHashMap<>());
+    assertEquals("r4", Utils.getObjectByPath(m, true, "operation/command/move-replica/replica"));
+    assertEquals("node1", Utils.getObjectByPath(m, true, "operation/command/move-replica/targetNode"));
+
+    m = l.get(1).toMap(new LinkedHashMap<>());
+    assertEquals("r3", Utils.getObjectByPath(m, true, "operation/command/move-replica/replica"));
+    assertEquals("node1", Utils.getObjectByPath(m, true, "operation/command/move-replica/targetNode"));
+
+    m = l.get(2).toMap(new LinkedHashMap<>());
+    assertEquals("r2", Utils.getObjectByPath(m, true, "operation/command/move-replica/replica"));
+    assertEquals("node1", Utils.getObjectByPath(m, true, "operation/command/move-replica/targetNode"));
+
+
+    autoScalingjson = "  { cluster-policy:[" +
+        "    { replica :'#ALL', freedisk:'>1000'}," +
+        "    { nodeRole : overseer, replica :0}]," +
+        "  cluster-preferences :[{ minimize : cores, precision : 2 }]}";
+    cfg = new AutoScalingConfig((Map<String, Object>) Utils.fromJSONString(autoScalingjson));
+    violations = cfg.getPolicy().createSession(cloudManagerWithData(dataproviderdata)).getViolations();
+    assertEquals(-4, violations.get(0).replicaCountDelta, 0.1);
+    assertEquals(1, violations.size());
+    assertEquals(4, violations.get(0).getViolatingReplicas().size());
+    for (Violation.ReplicaInfoAndErr r : violations.get(0).getViolatingReplicas()) {
+      assertEquals(500d, r.delta, 0.1);
+
+    }
+    l = PolicyHelper.getSuggestions(cfg, cloudManagerWithData(dataproviderdata));
+    assertEquals(3, l.size());
+    m = l.get(0).toMap(new LinkedHashMap<>());
     assertEquals("r4", Utils.getObjectByPath(m, true, "operation/command/move-replica/replica"));
     assertEquals("node1", Utils.getObjectByPath(m, true, "operation/command/move-replica/targetNode"));
 
@@ -2710,6 +2914,84 @@ public void testUtilizeNodeFailure2() throws Exception {
         Utils.getObjectByPath(root, true, "violations[0]/violation/replica/PULL"));
     assertEquals(0l,
         Utils.getObjectByPath(root, true, "violations[0]/violation/replica/TLOG"));
+
+  }
+
+
+  public void testFreediskPercentage(){
+    String dataproviderdata = "{" +
+        "  'liveNodes': [" +
+        "    'node1:8983'," +
+        "    'node2:8984'," +
+        "    'node3:8985'" +
+        "  ]," +
+        "  'replicaInfo': {" +
+        "    'node1:8983': {" +
+        "      'c1': {" +
+        "        's1': [" +
+        "          {'r1': {'type': 'NRT'}}," +
+        "          {'r2': {'type': 'NRT'}}" +
+        "        ]," +
+        "        's2': [" +
+        "          {'r1': {'type': 'NRT'}}," +
+        "          {'r2': {'type': 'NRT'}}" +
+        "        ]" +
+        "      }" +
+        "    }" +
+        "  }," +
+        "  'nodeValues': {" +
+        "    'node1:8983': {" +
+        "      'cores': 4," +
+        "      'freedisk': 230," +
+        "      'totaldisk': 800," +
+        "      'port': 8983" +
+        "    }," +
+        "    'node2:8984': {" +
+        "      'cores': 0," +
+        "      'freedisk': 1000," +
+        "      'totaldisk': 1200," +
+        "      'port': 8984" +
+        "    }," +
+        "    'node3:8985': {" +
+        "      'cores': 0," +
+        "      'freedisk': 1500," +
+        "      'totaldisk': 1700," +
+        "      'port': 8985" +
+        "    }" +
+        "  }" +
+        "}";
+    String autoScalingjson = "{" +
+        "  'cluster-preferences': [" +
+        "    { 'maximize': 'freedisk', 'precision': 50}," +
+        "    { 'minimize': 'cores', 'precision': 3}" +
+        "  ]," +
+        "  'cluster-policy': [" +
+        "    { 'replica': 0,  freedisk : '<30%'}" +
+        "  ]" +
+        "}";
+    AutoScalingConfig cfg = new AutoScalingConfig((Map<String, Object>) Utils.fromJSONString(autoScalingjson));
+    List<Violation> violations = cfg.getPolicy().createSession(cloudManagerWithData((Map) Utils.fromJSONString(dataproviderdata))).getViolations();
+    assertEquals(1, violations.size());
+    assertEquals(4, violations.get(0).getViolatingReplicas().size());
+    for (Violation.ReplicaInfoAndErr r : violations.get(0).getViolatingReplicas()) {
+      assertEquals(10.0d, r.delta.doubleValue(), 0.1);
+    }
+    autoScalingjson = "{" +
+        "  'cluster-preferences': [" +
+        "    { 'maximize': 'freedisk', 'precision': 50}," +
+        "    { 'minimize': 'cores', 'precision': 3}" +
+        "  ]," +
+        "  'cluster-policy': [" +
+        "    { 'replica':'#ALL' ,  freedisk : '>30%'}" +
+        "  ]" +
+        "}";
+    cfg = new AutoScalingConfig((Map<String, Object>) Utils.fromJSONString(autoScalingjson));
+    violations = cfg.getPolicy().createSession(cloudManagerWithData((Map) Utils.fromJSONString(dataproviderdata))).getViolations();
+    assertEquals(1, violations.size());
+    assertEquals(4, violations.get(0).getViolatingReplicas().size());
+    for (Violation.ReplicaInfoAndErr r : violations.get(0).getViolatingReplicas()) {
+      assertEquals(10.0d, r.delta.doubleValue(), 0.1);
+    }
 
   }
 
